[project]
name = "rl-mujoco-inverted-pendulum"
version = "0.1.0"
description = "Implementation of the REINFORCE algorithm for the InvertedPendulum-v5 environment using Gymnasium and PyTorch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[classic-control,mujoco,other]>=1.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
